--- a/index.html
+++ b/index.html
@@ -1199,7 +1199,7 @@
                 // console.log(data)
 
                 try {
-                    const response = await fetch('http://127.0.0.1:8000/api/quotes/', {
+                    const response = await fetch('https://oplueaswsapi.pythonanywhere.com/api/quotes/', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
