--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <nav class="navbar" id="navbar">
         <div class="nav-container">
             <div class="logo">
-                <img src="/img/logo.jpg" alt="">
+                <img src="/img/logo.png" alt="">
             </div>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#" class="nav-link active" data-page="home">Home</a></li>
