--- a/index.html
+++ b/index.html
@@ -1156,7 +1156,7 @@
 
         <div class="footer-bottom">
             <p>&copy; 2024 Ajibo Interiors Worldwide. All rights reserved. Designed with <i class="fas fa-heart"
-                    style="color: var(--accent-gold);"></i> <a href="http://" target="_blank"
+                    style="color: var(--accent-gold);"></i> <a href="https://oplueaswebservices.pythonanywhere.com/" target="_blank"
                     rel="noopener noreferrer">by Oplueas Web Services</a></p>
         </div>
     </footer>
