--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li><a href="#" class="nav-link" data-page="services">Services</a></li>
                 <li><a href="#" class="nav-link" data-page="portfolio">Our Works</a></li>
                 <li><a href="#" class="nav-link" data-page="contact">Contact</a></li>
-                <li><a href="http://localhost:8000/dashboard/" class="nav-link" >Dashboard</a></li>
+                <li><a href="https://ajibo-interiors-worldwide.onrender.com/dashboard/" class="nav-link" >Dashboard</a></li>
             </ul>
             <div class="nav-actions">
                 <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
