--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -327,7 +327,9 @@
             <div class="toast-title">Success</div>
             <div class="toast-message">Action completed successfully</div>
         </div>
-    
+        <button class="toast-close" onclick="hideToast()">
+            <i class="fas fa-times"></i>
+        </button>
     </div>
 
     <!-- Scripts -->
