--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     </div>
                     <div class="about-image slide-in-left">
                         <div class="skeleton skeleton-image">
-                            <img src="img/about-img.jpg" alt="">
+                            <img src="../img/about-img.jpg" alt="">
                         </div>
 
                     </div>
