--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@
                             </div>
                             <div class="contact-details">
                                 <h4>Email</h4>
-                                <p>hello@Ajibointeriors.com<br>info@Ajibointeriors.com</p>
+                                <p>ajibointeriordecorations@gmail.com</p>
                             </div>
                         </div>
 
