--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,7 @@
                 <ul class="footer-links">
                     <!-- <li><i class="fas fa-map-marker-alt"></i> 123 Design Avenue, NY 10001</li> -->
                     <li><i class="fas fa-phone"></i> +234 703 164 1315</li>
-                    <li><i class="fas fa-envelope"></i> email@Ajibointeriors.com</li>
+                    <li><i class="fas fa-envelope"></i>ajibointeriordecorations@gmail.com</li>
                     <li><i class="fas fa-clock"></i> Mon-Fri: 9AM - 6PM</li>
                 </ul>
             </div>
