--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -178,6 +178,11 @@
                     <i class="fas fa-receipt"></i>
                     <span>Receipts</span>
                 </a>
+
+                    <a href="#" class="nav-item" data-page="payments">
+                        <i class="fas fa-money-bill-wave"></i>
+                        <span>Payments</span>
+                    </a>
                 <!-- <a href="#" class="nav-item" data-page="projects">
                     <i class="fas fa-project-diagram"></i>
                     <span>Projects</span>
