--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <!-- ==================== NAVBAR ==================== -->
     <nav class="navbar" id="navbar">
         <div class="nav-container">
-            <div class="logo">
-                <img src="/img/logo.png" alt="">
+            <div class="logo" style="width:100px; height:100px;">
+                <img src="/img/logo.png" alt="" style="width:100%; height:100%">
             </div>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#" class="nav-link active" data-page="home">Home</a></li>
